# rules_d

./: .bazelrc  .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHORS  BUILD.bazel  CONTRIBUTING.md  CONTRIBUTORS  MODULE.bazel  README.md  REPO.bazel  WORKSPACE  _typos.toml
.bazelci/: presubmit.yml
.bcr/: metadata.template.json
.github/workflows/: bazel-v7.2.2-patched.yaml  buildifier.yaml  ci.bazelrc  ci.yaml  publish.yaml  release.yaml  release_prep.sh  tag.yaml
d/: BUILD  BUILD.bazel  DMD.bzl  LDC.bzl  config.bzl  d.bzl  defs.bzl  extensions.bzl  repositories.bzl  toolchain.bzl
d/constraints/compiler/: BUILD
d/private/: BUILD.bazel  providers.bzl  resolved_toolchain.bzl  toolchains_repo.bzl
d/private/rules/: BUILD.bazel  binary.bzl  cc_toolchain.bzl  common.bzl  compile.bzl  library.bzl  link.bzl  linking.bzl  test.bzl  utils.bzl
d/private/sdk/: BUILD.bazel  BUILD.dmd.bazel  BUILD.ldc.bazel  versions.bzl
d/private/sdk/versions_generator/: generate_versions_bzl.py
d/tests/c_library_usage/: BUILD.bazel  c_library_usage.d
d/tests/c_library_usage_no_wrapper/: BUILD.bazel  c_library_usage_no_wrapper.d  plus_one.c
d/tests/d_library_usage/: BUILD.bazel  d_library_usage.d
d/tests/feature_version/: BUILD.bazel  feature_version.d
d/tests/imports_attribute/: BUILD.bazel  main.d
d/tests/imports_attribute/path1/: no_prefix_import.d
d/tests/lib_that_depends_on_lib/: BUILD.bazel  lib_that_depends_on_lib.d
d/tests/lib_that_depends_on_lib_test/: BUILD.bazel  lib_that_depends_on_lib_test.d
d/tests/sdk/: versions_test.bzl
d/tests/simple/: BUILD.bazel  simple.d
d/tests/simple_as_binary/: BUILD.bazel  simple.d
d/tests/simple_c_library/: BUILD.bazel  simple_library_wrapper.d
d/tests/simple_d_library/: BUILD.bazel
d/tests/simplest/: BUILD.bazel
docs/: BUILD.bazel  rules.md
e2e/smoke/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel
e2e/smoke/tests/single_object_mode/: BUILD.bazel  lib_a.d  lib_b.d  lib_base.d  lib_c.d  lib_d.d  lib_mid.d  main.d  main2.d  main3.d  main4.d  main5.d  main6.d  multi_a.d  multi_b.d  multi_c.d  multi_d.d  multi_e.d  test_archive.d  test_mixed.d  test_multi_archive.d  test_multi_single.d  test_single.d
e2e/smoke/tests/std_lib/: BUILD.bazel
examples/dynamic_symbols/: BUILD  dynamic_symbols.txt
examples/hello_lib/: BUILD  greeter_test.d  native-greeter.c  native-greeter.h
examples/hello_world/: BUILD  hello_world.d
examples/string_imports/: BUILD  lib.d  main.d
tests/c_library_usage/: BUILD  c_library_usage.d
tests/c_library_usage_no_wrapper/: BUILD
tests/circular_deps/: BUILD  circular_deps_test.d  lib_a.d  lib_b.d
tests/circular_deps_with_gensrcs/: BUILD  circular_deps_test.d  lib_a.d  lib_b.d
tests/d_binary_no_source/: BUILD  testlib.d
tests/d_lib/: BUILD  lib.d  lib2.d  main.d
tests/d_lib_headers/: BUILD  lib.d
tests/d_library_compile_via_bc/: BUILD
tests/d_library_usage/: BUILD  d_library_usage.d
tests/deps_only_library/: BUILD  test.d
tests/directory_srcs/: BUILD  directory_generator.bzl
tests/fiber_thread_usage/: BUILD  fiber_thread_usage.d
tests/hack_replace_di/: BUILD  test.di
tests/header_only_library/: BUILD  header_only_library_test.d  lib.di
tests/implementation_deps/: BUILD  liba.d  libb.d
tests/lib_that_depends_on_lib/: BUILD  lib_that_depends_on_lib.d
tests/lib_that_depends_on_lib_test/: BUILD  lib_that_depends_on_lib_test.d
tests/mix_sources_and_generated/: BUILD  a.d  b.d  main.d
tests/simple/: BUILD
tests/simple_as_binary/: BUILD
tests/simple_c_library/: BUILD
tests/simple_d_library/: BUILD  simple_library.d
tests/simplest/: BUILD
todo/: phase04_bitcode_notes.md
tools/: BUILD.bazel  curl_downloader.d  generate_compiler_versions_bzl.d  integrity_hash.d  preset.bazelrc
