load("@bazel_lib//:bzl_library.bzl", "bzl_library")

exports_files(
    glob(["*.bzl"]),
    visibility = ["//docs:__pkg__"],
)

bzl_library(
    name = "binary",
    srcs = ["binary.bzl"],
    visibility = [
        "//d:__subpackages__",
        "//docs:__subpackages__",
    ],
    deps = ["//d/private/rules:common"],
)

bzl_library(
    name = "common",
    srcs = ["common.bzl"],
    visibility = [
        "//d:__subpackages__",
        "//docs:__subpackages__",
    ],
    deps = [
        "//d/private:providers",
        "@bazel_lib//lib:expand_make_vars",
        "@bazel_skylib//lib:dicts",
        "@bazel_skylib//lib:paths",
        "@bazel_tools//tools/cpp:toolchain_utils.bzl",
        "@rules_cc//cc/common",
    ],
)

bzl_library(
    name = "library",
    srcs = ["library.bzl"],
    visibility = [
        "//d:__subpackages__",
        "//docs:__subpackages__",
    ],
    deps = ["//d/private/rules:common"],
)

bzl_library(
    name = "test",
    srcs = ["test.bzl"],
    visibility = [
        "//d:__subpackages__",
        "//docs:__subpackages__",
    ],
    deps = ["//d/private/rules:common"],
)
