load("@bazel_lib//:bzl_library.bzl", "bzl_library")

exports_files(
    glob(["*.bzl"]),
    visibility = ["//docs:__pkg__"],
)

bzl_library(
    name = "binary",
    srcs = ["binary.bzl"],
    visibility = [
        "//d:__subpackages__",
        "//docs:__subpackages__",
    ],
    deps = [
        "//d/private:providers",
        "//d/private/rules:compile",
        "//d/private/rules:link",
    ],
)

bzl_library(
    name = "cc_toolchain",
    srcs = ["cc_toolchain.bzl"],
    visibility = [
        "//d:__subpackages__",
        "//docs:__subpackages__",
    ],
    deps = [
        "@rules_cc//cc:action_names_bzl",
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_cc//cc/common",
    ],
)

bzl_library(
    name = "compile",
    srcs = ["compile.bzl"],
    visibility = [
        "//d:__subpackages__",
        "//docs:__subpackages__",
    ],
    deps = [
        "//d/private:providers",
        "@bazel_skylib//lib:dicts",
        "@bazel_skylib//lib:paths",
    ],
)

bzl_library(
    name = "library",
    srcs = ["library.bzl"],
    visibility = [
        "//d:__subpackages__",
        "//docs:__subpackages__",
    ],
    deps = [
        "//d/private/rules:compile",
    ],
)

bzl_library(
    name = "link",
    srcs = ["link.bzl"],
    visibility = [
        "//d:__subpackages__",
        "//docs:__subpackages__",
    ],
    deps = [
        "//d/private/rules:cc_toolchain",
        "//d/private/rules:utils",
        "@bazel_lib//lib:expand_make_vars",
    ],
)

bzl_library(
    name = "test",
    srcs = ["test.bzl"],
    visibility = [
        "//d:__subpackages__",
        "//docs:__subpackages__",
    ],
    deps = [
        "//d/private:providers",
        "//d/private/rules:compile",
        "//d/private/rules:link",
        "@rules_cc//cc:find_cc_toolchain_bzl",
    ],
)

bzl_library(
    name = "utils",
    srcs = ["utils.bzl"],
    visibility = [
        "//d:__subpackages__",
        "//docs:__subpackages__",
    ],
)