load("@rules_d//d:config.bzl", "d_toolchain_config")
load("@rules_d//d:toolchain.bzl", "d_toolchain")

filegroup(
    name = "all_files",
    srcs = [
        ":dmd",
        ":dub",
        ":rdmd",
    ],
)

filegroup(
    name = "druntime_files",
    srcs = glob([
        "import/core/**",
        "import/etc/**",
    ]) + ["import/object.d"],
)

filegroup(
    name = "phobos_files",
    srcs = glob(["import/std/**"]),
)

filegroup(
    name = "stdlib_files",
    srcs = glob(["lib/**"]),
)

filegroup(
    name = "dmd",
    srcs = ["bin/ldmd2"],
    data = [
        ":druntime_files",
        ":phobos_files",
        ":stdlib_files",
    ],
)

filegroup(
    name = "dub",
    srcs = ["bin/dub"],
)

filegroup(
    name = "rdmd",
    srcs = ["bin/rdmd"],
    data = [":dmd"],
)

d_toolchain_config(
    name = "ldc_config",
    d_compiler = ":dmd",
    dub_tool = ":dub",
    rdmd_tool = ":rdmd",
    # LDC-specific flags (this is actually LDC, not DMD, based on ldmd2 binary)
    copts_common = ["-w"],  # Enable warnings
    dbg_copts = ["-g", "-d-debug", "-d-version=debug_assert"],
    opt_copts = ["-O3", "-release"],
    lib_flags = ["-lib"],
    import_flags = ["-I"],
    version_flag = "-d-version=",
    # LDC supports bitcode
    output_bc_flags = ["-output-bc"],
    single_object = True,
    compile_via_bc = False,
    fat_lto = False,
)

d_toolchain(
    name = "d_toolchain",
    config = ":ldc_config",
)
