load("@rules_d//d:defs.bzl", "d_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

d_binary(
    name = "simple",
    srcs = ["simple.d"],
)

sh_test(
    name = "simple_as_binary",
    srcs = ["run_simple.sh"],
    data = [":simple"],
)

genrule(
    name = "run_simple",
    outs = ["run_simple.sh"],
    cmd = "echo $(rootpath :simple) > $@",
    executable = True,
    tools = [":simple"],
)
