load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_d//d:defs.bzl", "d_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "simple_c_library",
    srcs = ["simple_library.c"],
)

d_library(
    name = "simple_c_library_wrapper",
    srcs = ["simple_library_wrapper.d"],
    source_only = True,
    deps = [":simple_c_library"],
)
